--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 blinker==1.7.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==42.0.5
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==4.0.0
@@ -10,6 +12,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==24.0
+pycparser==2.22
 pyotp==2.9.0
 requests==2.31.0
 urllib3==2.2.1
